# wellness-buddy

./: .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  README.md  docker-compose.yml  lint-staged.config.js  package.json  pnpm-lock.yaml
.claude/worktrees/agent-a82e8baba489d59cd/: package.json  pnpm-lock.yaml
.github/workflows/: axe-a11y.yml  dark-mode-screenshot.yml  pr.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/resolved/: snack-options-render-as-combined.md
.planning/phase-01-foundation/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-UI-SPEC.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02a-PLAN.md  01-02a-SUMMARY.md  01-02b-PLAN.md  01-02b-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-05-PLAN.md  01-05a-PLAN.md  01-05a-SUMMARY.md  01-05b-PLAN.md  01-05b-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-07-SUMMARY.md  01-08-PLAN.md  01-08-tone-calibration-checklist.md  01-09-PLAN.md  01-RESEARCH.md  01-VALIDATION.md  VERIFICATION.md
.planning/phases/02-differentiators/: 02-01-GTK3-SPIKE.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-DEPLOY-CHECKLIST.md  02-03-PLAN.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-IPHONE-PDF-VERIFY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-08-DEPLOY-V0.2-UPDATE.md  02-08-PLAN.md  02-08-SUMMARY.md  02-08-TONE-REVIEW-CHECKLIST.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-UI-SPEC.md  VERIFICATION.md  deferred-items.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0000_baseline.py  0001_weekly_variant_per_day.py  0002_activate_groups.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  base.py  factory.py  null_provider.py
backend/app/api/: __init__.py  admin.py  ai.py  auth.py  errors.py  family.py  health.py  plans.py  shopping.py  today.py  version.py  weekly.py  weight.py  workout.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  exceptions.py  logging.py  middleware.py  scheduler.py  security.py
backend/app/models/: __init__.py  audit.py  base.py  group.py  invite.py  plan.py  refresh.py  shopping.py  user.py  variant.py  weight.py  workout.py
backend/app/parsers/: __init__.py  normalizer.py  plan_parser.py  plan_sections.py
backend/app/schemas/: __init__.py  ai.py  auth.py  common.py  family.py  group.py  invite.py  plan.py  plan_parsed.py  shopping.py  today.py  user.py  weekly.py  weight.py  workout.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  category_mapper.py  family_service.py  group_service.py  ingredient_parser.py  pdf_export.py  plan_service.py  shopping_service.py  today_service.py  variant_service.py  weekly_service.py  weight_service.py  workout_service.py
backend/app/templates/: __init__.py  _build_inline_fonts.py  shopping_list.html
backend/scripts/: check_pdf_template_oklch.py
backend/tests/: conftest.py
backend/tests/fixtures/plans/evil/: nbsp_in_headings.md  notepad_bom.md  notes_app_nfd.md  notion_export_emoji.md  obsidian_export.md  word_export.md
backend/tests/fixtures/plans/valid/: marta_synthetic.md  stefano_synthetic.md
backend/tests/integration/: test_ai_api.py  test_alembic_0002.py  test_alembic_baseline.py  test_app_startup.py  test_auth.py  test_auth_register_creates_group.py  test_family_api.py  test_family_authz_matrix.py  test_health.py  test_invite.py  test_pdf_export.py  test_plans_api.py  test_scheduler.py  test_shopping_api.py  test_stub_endpoints.py  test_today_api.py  test_weekly_api.py  test_weekly_per_day_api.py  test_weight.py  test_workout.py
backend/tests/unit/: test_ai_provider.py  test_category_mapper.py  test_ingredient_parser.py  test_models.py  test_normalizer.py  test_parser_evil.py  test_pdf_export_factory.py  test_plan_schema.py  test_shopping_service.py  test_variant_service.py
backend/tests/unit/parsers/: test_category_annotation.py  test_grid_format.py  test_snack_options.py  test_snack_serale_oppure.py
backend/tests/unit/services/: test_today_per_day_variant.py  test_today_snack_ordering.py  test_today_snack_split.py
deploy/: .env.production.example
deploy/iis/: web.config
deploy/nssm/: install-service.ps1  wellness-buddy.service.json
deploy/scripts/: generate-secrets.ps1  package-release.ps1  smoke-test.ps1
deploy/win-acme/: README.md
docs/: PROMPT_CONTRACT_WELLNESS_BUDDY.md
frontend/: .env.example  components.json  eslint.config.js  index.html  lighthouserc.json  package.json  playwright.config.ts  playwright.dev.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/public/: version.json
frontend/src/: App.tsx  main.tsx  router.tsx  vite-env.d.ts
frontend/src/db/: dexie.ts  migrations.ts  schema.ts
frontend/src/hooks/: useDebounce.ts  (+7 more)
mockups/tone-calibration/: A-75-25-elegant.html  B-50-50-balanced.html  C-25-75-playful.html  README.md  index.html  shared.css
mockups/tone-calibration-v2/: A-lifesum-pure.html  B-lifesum-italian.html
plans/: EXAMPLE.md
scripts/: check-env.sh  generate-pwa-placeholder-icons.mjs
(+126 files in other folders)
