[project]
name = "wellness-buddy-backend"
version = "0.1.0"
description = "Wellness Buddy FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "markdown>=3.7",
    "structlog>=24",
    "bcrypt<4.1",
    # Phase 2 — PDF export (D-11..D-14, DEP-06).
    # WeasyPrint primary requires GTK3/Pango on Windows Server (DEPLOY.md Appendix B);
    # ReportLab fallback activates via PDF_BACKEND=reportlab if 02-01 spike trips 5xx >2%.
    "weasyprint>=62,<63",
    "reportlab>=4,<5",
    "jinja2>=3.1,<4",
    # Phase 2 — APScheduler for shopping list weekly reset cron (D-09).
    # Already needed Phase 3 for push reminders; install once now.
    "apscheduler>=3.11,<4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-postgresql>=6",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-python-jose",
    "types-passlib",
    "freezegun>=1.5.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Match async test loop to the session-scoped engine fixture so connections stay valid.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
# Disable pytest-postgresql plugin: we use our own asyncpg-based ephemeral DB fixture in conftest.
# pytest-postgresql pulls in psycopg which lacks libpq on Windows dev machines.
addopts = "-ra --strict-markers --strict-config -p no:postgresql"
markers = [
    "integration: integration tests requiring postgres",
    "unit: pure unit tests, no I/O",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "*/tests/*"]
# greenlet concurrency is required for SQLAlchemy 2 async — without it coverage
# misses lines that execute inside the asyncpg/greenlet bridge (e.g. auth_service
# routines invoked via FastAPI Depends + httpx ASGI client).
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "T20"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20"]
# FastAPI uses `Depends()` as a default arg — that's the idiomatic DI pattern.
"app/core/deps.py" = ["B008"]
"app/api/**" = ["B008"]
# SQLAlchemy idioms: `UUID as PgUUID` (N811) and `date as DateType` (N812) are widespread
# conventions in the SQLAlchemy ecosystem to disambiguate stdlib vs dialect-specific types.
# UP042 (str, Enum -> StrEnum) is suggested but `class Visibility(str, PyEnum)` is the
# documented pattern for SQLAlchemy SAEnum + Pydantic v2 interop pre-3.11 StrEnum.
"app/models/**" = ["N811", "N812", "UP042"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]
exclude = ["alembic/versions"]
plugins = []

[[tool.mypy.overrides]]
module = ["passlib.*", "jose.*", "weasyprint.*", "reportlab.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
